k8s/vhg-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vhg-pod
  labels:
    component: web
spec:
  containers:
    - name: vhg
      image: beldenschroeder/vhg
      ports:
        - containerPort: 3000
