k8s/vhg-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vhg-ingress-service
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/use-regex: 'true' # TODO: Not part of Udemy course
    # nginx.ingress.kubernetes.io/rewrite-target: /$1 # TODO: Not part of Udemy course
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # TODO: Not part of Udemy course
  rules:
    - http:
        paths:
          # - path: /?(.*)
          - path: /
            # pathType: ImplementationSpecific
            pathType: Prefix
            backend:
              service:
                # name: vhg-cluster-ip-service
                name: website
                port:
                  number: 80
                  # number: 3000
          # - path: /api/?(.*) # TODO: Not part of Udemy course
          #   # UPDATE PATH
          #   pathType: ImplementationSpecific # TODO: Not part of Udemy course
          #   # ADD PATHTYPE
          #   backend:
          #     service:
          #       # UPDATE SERVICE FIELDS
          #       # name: vhg-cluster-ip-service
          #       name: website
          #       port:
          #         number: 5000
